# pyTabToolbar

./: .flake8  .gitignore  .isort.cfg  MANIFEST.in  README.md  setup.cfg
docs/: index.md
example/src/: main.py  mainwindow.py  res_rc.py
src/pytabtoolbar/: __init__.py  _builder.py  _compacttoolbutton.py  group.py  page.py  subgroup.py  tabtoolbar.py
src/pytabtoolbar/style/: __init__.py  styletemplate.py  toolbarstyles.py  toolbuttonstyle.py
src/pytabtoolbar/style/qtproperties/: __init__.py
