[bdist_wheel]
universal = 1

[metadata]
# replace with your username:
name = pytabtoolbar
version = 1.0.0
author = Desterly
author_email = desterly@stressfactor.net
description = Python Tab Toolbar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Desterly/pytabtoolbar
project_urls =
    Bug Tracker = https://github.com/Desterly/pytabtoolbar/issues
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires= PyQt5

[options.packages.find]
where = src